<resources>
    <string name="app_name">آزمون</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="want_to_register">می خواهم عضو شوم</string>
    <string name="register_in_app">عضویت در برنامه</string>
    <string name="email_address">آدرس ایمیل</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="register">عضویت</string>
    <string name="already_have_account">قبلا ثبت نام کرده اید؟</string>
    <string name="user_name_or_email">ایمیل یا نام کاربری</string>
    <string name="empty_user_name_email_error">لطفا نام کاربری یا ایمیل خود را وارد کنید</string>
    <string name="error_empty_password">لطفا رمز عبور را وارد کنید</string>
    <string name="not_a_member">عضو نیستید؟</string>
    <string name="sign_up">ثبت نام</string>
    <string name="user_name">نام کاربری</string>
    <string name="error_empty_user_name">لطفا نام کاربری خود را وارد کنید</string>
    <string name="error_empty_email_field">لطفا ایمیل خود را وارد کنید</string>
    <string name="error_empty_password_repeat">لطفا تکرار رمز عبور را وارد کنید</string>
    <string name="error_password_mismatch">رمز عبور و تکرار آن تطابق ندارند</string>
    <string name="user_login">ورود اعضا</string>
    <string name="unvalide_email">فرمت ایمیل وارد شده درست نمی‌باشد</string>
    <string name="error_email_max_length">ایمیل نمی تواند بیشتر از 128 کاراکتر باشد</string>
    <string name="error_user_name_length">نام کاربری باید حداقل 4 کاراکتر باشد</string>
    <string name="error_user_name_contain_space">نام کاربری باید بدون فاصله باشد</string>
    <string name="error_password_length">رمز عبور باید شامل حداقل 8 کاراکتر باشد</string>
    <string name="error_password_should_contain_word_and_number">رمز عبور باید ترکیبی از حروف و اعداد انگلیسی باشد</string>
    <string name="error_password_no_upper_case">رمز عبور باید شامل حروف بزرگ باشد</string>
    <string name="start_quiz">شروع آزمون</string>
    <string name="exit">خروج</string>
    <string name="okay">باشه</string>
    <string name="next_question">سوال بعدی</string>
    <string name="finish_quiz">اتمام آزمون</string>
    <string name="question_activity_page_title">درس مورد نظر</string>
    <string name="question_activity_page_subtitle">رشته مورد نظر</string>
    <string name="content_description_favorite">محبوب ترین</string>
    <string name="content_description_search">جستجو</string>
    <string name="content_description_more">موارد بیشتر</string>
    <string name="dummy_question">این یک نمونه سوال برای آزمایش می باشد و هیچ گونه ارزش دیگری ندارد با تشکر؟</string>
    <string-array name="question_numbers">
        <item>۱</item>
        <item>۲</item>
        <item>۳</item>
        <item>۴</item>
        <item>۵</item>
        <item>۶</item>
        <item>۷</item>
        <item>۸</item>
        <item>۹</item>
        <item>۱۰</item>
        <item>۱۱</item>
        <item>۱۲</item>
        <item>۱۳</item>
        <item>۱۴</item>
        <item>۱۵</item>
        <item>۱۶</item>
        <item>۱۷</item>
        <item>۱۸</item>
        <item>۱۹</item>
        <item>۲۰</item>
        <item>۲۱</item>
        <item>۲۲</item>
        <item>۲۳</item>
        <item>۲۴</item>
        <item>۲۵</item>
        <item>۲۶</item>
        <item>۲۷</item>
        <item>۲۸</item>
        <item>۲۹</item>
        <item>۳۰</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_comment">این یک نمونه نظر می باشد و هیچ گونه ارزش دیگری ندارد.</string>
    <string name="show_detail">مشاهده جزییات</string>
</resources>